fixing header on mobile phones and tablets

--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -12,10 +12,12 @@
     padding: 0 $fields;
 
     @media screen and (max-width: $break_md - 1px){
+      margin-top: 65px;
       padding: 0 $fields-md;
     }
 
     @media screen and (max-width: $break_sm - 1px){
+      margin-top: 48px;
       padding: 0 $fields-sm;
     }
   }
